--- a/package.json
+++ b/package.json
@@ -11,6 +11,17 @@
   "dependencies": {
     "express": "^4.17.1",
     "http": "0.0.0",
+    "mongodb": "^3.5.2",
     "mustache-express": "^1.3.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sezerb/sample_project.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Sezerb/sample_project/issues"
+  },
+  "homepage": "https://github.com/Sezerb/sample_project#readme"
 }
